# amazon-kinesis-video-streams-webrtc-sdk-c

./: .dockerignore  .gitignore  .gitmodules  .project  .travis.yml  CMakeLists.txt  ChannelInfo_8c.html  ChannelInfo_8h.html  ChannelInfo_8h_source.html  Client_8c.html  ConnectionListener_8c.html  ConnectionListener_8h.html  ConnectionListener_8h_source.html  Crypto_8c.html  Crypto_8h.html  Crypto_8h_source.html  DataChannel_8c.html  DataChannel_8h.html  DataChannel_8h_source.html  Deserialize_8c.html  Dtls_8c.html  Dtls_8h.html  Dtls_8h_source.html  Dtls__mbedtls_8c.html  Dtls__openssl_8c.html  FileCache_8c.html  FileCache_8h.html  FileCache_8h_source.html  Gcc_8c.html  Gcc_8h.html  Gcc_8h_source.html  Gcc__i_8h.html  Gcc__i_8h_source.html  IOBuffer_8c.html  IOBuffer_8h.html  IOBuffer_8h_source.html  IceAgentStateMachine_8c.html  IceAgentStateMachine_8h.html  IceAgentStateMachine_8h_source.html  IceAgent_8c.html  (+693 more)
.github/: github_deploy_key
.github/docker/: alpine.Dockerfile  build-deps.sh  ubuntu20.Dockerfile  ubuntu22.Dockerfile
.github/workflows/: ci-android.yml  ci-linux-superbuild.yml  ci-linux.yml  ci-mac-browser.yml  ci-mac-superbuild.yml  ci-mac.yml  ci-windows.yml  close-stale-issues.yml  codecov.yml  doxygen-gh-pages.yml
CMake/: Utilities.cmake
CMake/Dependencies/: libgtest-CMakeLists.txt  libjsmn-CMakeLists.txt  libkvsCommonLws-CMakeLists.txt  libopenssl-CMakeLists.txt  libsrtp-CMakeLists.txt  libusrsctp-CMakeLists.txt  libwebsockets-CMakeLists.txt
android-test-app/: CMakeLists.txt  jni_bridge.cpp
android-test-app/app/: build.gradle
android-test-app/app/src/androidTest/java/com/kvs/webrtctest/: WebRtcNativeTest.java
android-test-app/app/src/main/java/com/kvs/webrtctest/: NativeTestLib.java
browser-test/: dcTestServer.cpp
examples/: client.js  index.html  webcam.py  whipIndex.html
rfcs/: draft-ietf-wish-whep-03.txt  rfcs.md
samples/: CMakeLists.txt  Common.c  MySignaling.c  MySignaling.h  Samples.h  SamplesCommon.c  SamplesCommon.h  customSignaling.c  customSignalingGstreamer.c  h264JitterBufferSim.cpp  kvsWebRTCClientMaster.c  pcapDump.c  pcapGcc.c  pcapJitterBuffer.c  whepServer.cpp  whipServer.cpp
samples/bbbH264/: frame-0001.h264  frame-0002.h264  frame-0003.h264  frame-0004.h264  frame-0005.h264  frame-0006.h264  frame-0007.h264  frame-0008.h264  frame-0009.h264  frame-0010.h264  frame-0011.h264  frame-0012.h264  frame-0013.h264  frame-0014.h264  frame-0015.h264  frame-0016.h264  frame-0017.h264  frame-0018.h264  frame-0019.h264  frame-0020.h264  frame-0021.h264  frame-0022.h264  frame-0023.h264  frame-0024.h264  frame-0025.h264  frame-0026.h264  frame-0027.h264  frame-0028.h264  frame-0029.h264  frame-0030.h264  frame-0031.h264  frame-0032.h264  frame-0033.h264  frame-0034.h264  frame-0035.h264  frame-0036.h264  frame-0037.h264  frame-0038.h264  frame-0039.h264  frame-0040.h264  (+1460 more)
samples/examples/: InputEvents.js  client.js
samples/girH264/: frame-0001.h264  frame-0002.h264  frame-0003.h264  frame-0004.h264  frame-0005.h264  frame-0006.h264  frame-0007.h264  frame-0008.h264  frame-0009.h264  frame-0010.h264  frame-0011.h264  frame-0012.h264  frame-0013.h264  frame-0014.h264  frame-0015.h264  frame-0016.h264  frame-0017.h264  frame-0018.h264  frame-0019.h264  frame-0020.h264  frame-0021.h264  frame-0022.h264  frame-0023.h264  frame-0024.h264  frame-0025.h264  frame-0026.h264  frame-0027.h264  frame-0028.h264  frame-0029.h264  frame-0030.h264  frame-0031.h264  frame-0032.h264  frame-0033.h264  frame-0034.h264  frame-0035.h264  frame-0036.h264  frame-0037.h264  frame-0038.h264  frame-0039.h264  frame-0040.h264  (+1460 more)
samples/html/: client.js  index.html  whipClient.js
scripts/: check-clang.sh  run-android-app-test.sh  run-tests-on-device.sh  test-browser.sh  test-ci-android.sh
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_d.js  classes_e.js  defines_0.js  defines_1.js  defines_10.js  defines_12.js  defines_2.js  defines_3.js  defines_4.js  defines_6.js  defines_7.js  defines_b.js  (+66 more)
src/source/: Include_i.h  UvPlatform.h
src/source/Crypto/: Dtls_mbedtls.c  Dtls_openssl.c
superbuild/: CMakeLists.txt
tst/: CMakeLists.txt  DataChannelFunctionalityTest.cpp  DtlsFunctionalityTest.cpp  DualStackEndpointsTest.cpp  GccFunctionalityTest.cpp  H264JitterBufferIntegrationTest.cpp  IceApiTest.cpp  IceFunctionalityTest.cpp  IngestionFunctionalityTests.cpp  JitterBufferFunctionalityTest.cpp  OpusJitterBufferIntegrationTest.cpp  OpusRedIntegrationTest.cpp  PacerFunctionalityTest.cpp  PeerConnectionApiTest.cpp  PeerConnectionFunctionalityTest.cpp  RollingBufferFunctionalityTest.cpp  RtcpFunctionalityTest.cpp  RtpFunctionalityTest.cpp  RtpRedPayloaderTest.cpp  SctpAssocApiTest.cpp  SctpAssocFunctionalityTest.cpp  SctpCrc32cApiTest.cpp  SctpPacketApiTest.cpp  SctpTestHelpers.h  SdpApiTest.cpp  SignalingApiFunctionalityTest.cpp  SignalingApiTest.cpp  TurnConnectionFunctionalityTest.cpp  WebRTCClientTestFixture.cpp  WebRTCClientTestFixture.h
(+59 files in other folders)
